# gpt-controller

./: README.md  config.py  evaluation_interface.ipynb  manual.ipynb  pyproject.toml  run.py  system_visualisation.ipynb
gpt_controller/: config.py
gpt_controller/app/util/: threading.py
gpt_controller/chat_gpt_interface/: api_tools.py
gpt_controller/chat_gpt_interface/experimental/: shape_outline_generator.txt
gpt_controller/chat_gpt_interface/prompts/: general_capabilities.txt  get_goal_predicates.txt  get_task_segmentation.txt
gpt_controller/cognition/: environment.py  machine.py  manipulation.py  models.py  perception.py
gpt_controller/interface/: interface.py
gpt_controller/interface/util/: threading.py  triggers.py
gpt_controller/memory/: models.py  short_term.py
gpt_controller/playground/: environment.py  robot.py
gpt_controller/util/: labels.py  models.py
prompts/: set_goal_predicates.txt  task_segmentation.txt  task_segmentation_with_navigability.txt  user_input_labelling.txt
prompts/cognition/: act.txt  decision_making.txt  function_similarity.txt  general_capabilities.txt  label_input.txt  memorize_derivate_function.txt  memorize_object.txt  question_about_context.txt  segment_input.txt
src/gpt_controller/: config.py
src/gpt_controller/app/: app.py
src/gpt_controller/chat_gpt_interface/: api_tools.py  exceptions.py
src/gpt_controller/chat_gpt_interface/prompts/: grasp.txt  (+2 more)
src/gpt_controller/cognition/: machine.py
src/gpt_controller/memory/: models.py
src/gpt_controller/util/: exceptions.py  labels.py
